[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/onyx_cc_nc/landing/15.png" type="Texture" id=1]
[ext_resource path="res://interface/landing/landing_main.gd" type="Script" id=2]
[ext_resource path="res://interface/landing/Store.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/landing/exchange.tscn" type="PackedScene" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 5
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.125
margin_top = -210.5
margin_right = 311.875
margin_bottom = 210.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.5
margin_top = 1.0
margin_right = 166.5
margin_bottom = 272.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 66.0
margin_right = 3.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
text = "PLANET NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipyardButton" type="Button" parent="Panel"]
margin_left = 15.0
margin_top = 320.0
margin_right = 81.0
margin_bottom = 340.0
text = "Shipyard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeButton" type="Button" parent="Panel"]
margin_left = 15.0
margin_top = 352.0
margin_right = 81.0
margin_bottom = 372.0
text = "Trade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="Panel"]
margin_left = 544.0
margin_top = 319.0
margin_right = 610.0
margin_bottom = 339.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.5
margin_top = -110.0
margin_right = 165.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Store" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Exchange" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Panel/ShipyardButton" to="." method="_on_ShipyardButton_pressed"]
[connection signal="pressed" from="Panel/TradeButton" to="." method="_on_Trade_Button_pressed"]
